CLEREZZA-217: tests working again with pax-exam 1.2.1
git-svn-id: https://svn.apache.org/repos/asf/incubator/clerezza/trunk@986011 13f79535-47bb-0310-9956-ffa450edef68